Fix more compatibility of LibraryLoader